# 42-push-swap

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  PushSwap.hs  README.md  cabal.project.local  docker-compose.yml  main.scm  push-swap.cabal  push-swap.scm  push_swap.scm
app/: Main.hs  Shuffled.hs
src/: PushSwap.hs
