cabal-version:      2.4
name:               push-swap
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Toru Hisai
maintainer:         toru@torus.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  PushSwap

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
        lists,
        array
    hs-source-dirs:   src
    default-language: Haskell2010

executable push-swap
    main-is:          Main.hs

    ghc-options:
        -O2
        -threaded
        -- -fprof-auto
        -- "-with-rtsopts=-N -p -s -h -i0.1"

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        push-swap

    hs-source-dirs:   app
    default-language: Haskell2010
